Add printable recipts for the dropoffs and pickups

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -168,6 +168,9 @@ textarea,
 .width-500 {
     width: 500px;
 }
+.width-540 {
+    width: 540px;
+}
 
 .width-550 {
     width: 550px;
@@ -176,6 +179,19 @@ textarea,
 .width-600 {
     width: 600px;
 }
+
+.width-650 {
+    width: 650px;
+}
+
+.width-680 {
+    width: 680px;
+}
+
+.width-700 {
+    width: 700px;
+}
+
 
 .vertical-align {
     display: flex;
